openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z14.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@interface An<T> {
    int a();
}
